# yt-for-scarlet

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
scarlet-youtube/: Cargo.toml
scarlet-youtube-net/: Cargo.toml
scarlet-youtube-net/src/: lib.rs
scarlet-youtube/src/: lib.rs
user/lib/scarlet-youtube/: Cargo.toml
user/lib/scarlet-youtube-net/: Cargo.toml
user/lib/scarlet-youtube-net/src/: lib.rs
user/lib/scarlet-youtube/src/: lib.rs
yt/: Cargo.toml
yt-gui/: Cargo.toml
yt-gui/src/: main.rs
yt/src/: main.rs
