[workspace]
resolver = "3"
members = [
    "scarlet-youtube",
    "scarlet-youtube-net",
    "yt",
    "yt-gui",
]

[workspace.dependencies]
scarlet-youtube = { path = "scarlet-youtube" }
scarlet-youtube-net = { path = "scarlet-youtube-net" }
scarlet-ui = { git = "https://github.com/petitstrawberry/Scarlet", package = "scarlet-ui", default-features = false, features = ["std"] }
scarlet-ui-macros = { git = "https://github.com/petitstrawberry/Scarlet", package = "scarlet-ui-macros" }

[patch.crates-io]
ring = { path = "vendor/ring" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
