[package]
name = "scarlet-youtube-net"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
scarlet-youtube = { workspace = true }
scarlet-os = { git = "https://github.com/petitstrawberry/Scarlet", package = "scarlet-os" }
getrandom = { version = "0.2", features = ["custom"] }
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
